fixed alignment of arrows

--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,6 @@
   display: inline-block;
   width: 60px;
   height: 34px;
-  left: 38%;
-  top: 660px;
 }
 
 /* Hide default HTML checkbox */
@@ -77,6 +75,7 @@ input:checked + .slider:before {
 .location-pin:hover {
     cursor: ;
 }
+
 /* .card {
     width: 450px;
     height: 250px;
